# ls-interactive

./: Cargo.toml  LICENSE  README.md
.github/workflows/: check.yml  release.yml  rust-check.yml
scripts/: lsi.bat  lsi.fish  lsi.nu  lsi.ps1  lsi.sh
scripts/cli-editor/: README.md  lsi.bat  lsi.fish  lsi.nu  lsi.ps1  lsi.sh
src/: check_version.rs  icons.rs  main.rs  simple.rs  structs.rs  utils.rs
src/structs/: entry.rs  filetype.rs  icons.rs  mod.rs  prompt.rs  prompt_renderer.rs
