[package]
name = "ls-interactive"
description = "Interactive ls command"
version = "1.6.0"
authors = ["Araxeus <oaeben@gmail.com>"]
homepage = "https://github.com/Araxeus/ls-interactive"
license = "MIT"
edition = "2021"
readme = "README.md"
repository = "https://github.com/Araxeus/ls-interactive"
keywords = ["ls", "lsi", "cli", "interactive", "explorer", "list", "files", "folders", "directory"]
categories = ["command-line-utilities"]

[dependencies]
console = "0.15.5"
open = "4.0.0"
human-panic = "1.1.3"
lnk = "0.5.1"
fuzzy-matcher = "0.3.7"
crossterm = "0.26.1"
unicode-segmentation = "1.10.1"
tiny_update_notifier = "2.2.0"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.44.0", features = ["Win32_Storage_FileSystem"] }
